--- a/ForcaTDD/ForcaTDD/ForcaTDD.csproj
+++ b/ForcaTDD/ForcaTDD/ForcaTDD.csproj
@@ -54,8 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SorteioPalavra.cs" />
     <Compile Include="Testes\ForcaControllerTeste.cs" />
-    <Compile Include="ISorteioPalavra.cs" />
-    <Compile Include="Testes\SorteioPalavraStub.cs" />
+    <Compile Include="Testes\SorteioPalavraTeste.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
