Forca TDD finalizado

--- a/ForcaTDD/ForcaTDD/ForcaTDD.csproj
+++ b/ForcaTDD/ForcaTDD/ForcaTDD.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ForcaController.cs" />
+    <Compile Include="Mensagens.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SorteioPalavra.cs" />
